Create form header

--- a/pages/AddressBookForm.html
+++ b/pages/AddressBookForm.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -6,14 +7,26 @@
     <link rel="stylesheet" href="../css/AddressBookForm.css">
     <title>Address Book Form</title>
 </head>
+
 <body>
     <header class="header-content header">
         <div class="logo-content">
             <img src="../assets/images/AddressBookImage.jpg" alt="">
             <div>
                 <span class="address-text">AddressBook</span><br>
-                </div>
+                
+            </div>
         </div>
     </header>
+    <div class="form-content">
+        <div class="form-head">
+            Person Address Form
+            <a href="../pages/homePage.html" class="cancel-button"> <img src="../assets/Images/delete-black.jpg" alt=""></a>
+        </div>
+        <form class="form" action="#" onreset="resetForm()" onsubmit="save()">
+            
+        </form>
+    </div>
 </body>
+
 </html>
