Added input fields

--- a/pages/AddressBookForm.html
+++ b/pages/AddressBookForm.html
@@ -20,11 +20,59 @@
     </header>
     <div class="form-content">
         <div class="form-head">
-            Person Address Form
-            <a href="../pages/homePage.html" class="cancel-button"> <img src="../assets/Images/delete-black.jpg" alt=""></a>
+            <span> PERSON ADDRESS FORM </span>
+            <span id="img"><a href="../pages/homePage.html" class="cancel-button"><img src="../assets/Images/cancel.jpg" height="20" width="20"alt="" ></a></span>
         </div>
         <form class="form" action="#" onreset="resetForm()" onsubmit="save()">
-            
+            <label class="label text" for="name">Full Name</label>
+            <div class="row-content">
+                <input class="input" type="text" id="name" name="name" placeholder="Enter Name" required>
+            </div>
+
+            <label class="label text" for="phoneNumber">Phone Number</label>
+            <div class="row-content">
+                <input class="input" type="tel" id="phoneNumber" name="phoneNumber" placeholder="Enter Phone Number" required>
+            </div>
+
+            <label class="label text" for="Address">Address</label>
+            <div class="row-content">
+                <textarea class="input" name="Address" id="Address" rows="4" placeholder="Enter Address"></textarea>
+            </div>
+
+            <div class="row">
+                <div class="input-content">
+                    <label class="label text" for="City">City</label>
+                    <div class="row-content">
+                        <select class="input" name="City" id="City">
+                            <option value="">City</option>
+                            <option value="Mumbai">Mumbai</option>
+                            <option value="Patna">Patna</option>
+                            <option value="Chennai">Chennai</option>
+                            <option value="Kolkata">Kolkata</option>
+                            <option value="Jaipur">Jaipur</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="input-content">
+                    <label class="label text" for="State">State</label>
+                    <div class="row-content">
+                        <select class="input" name="State" id="State">
+                            <option value="">State</option>
+                            <option value="Rajasthan">Rajasthan</option>
+                            <option value="Maharashtra">Maharashtra</option>
+                            <option value="West Bengal">West Bengal</option>
+                            <option value="Bihar">Bihar</option>
+                            <option value="Tamil Nadu">Tamil Nadu</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="input-content">
+                    <label class="label text" for="ZipCode">ZipCode</label>
+                    <div class="row-content">
+                        <input class="input" type="number" id="ZipCode" name="ZipCode" placeholder="Enter Zip Code" required>
+                    </div>
+                </div>
+            </div>
         </form>
     </div>
 </body>
